<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical">
    <Button
        android:id="@+id/btn_idea"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:background="#8CCDAA7D"
        android:text="@string/btn_idea"/>
    <EditText
    android:id="@+id/et_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#26ffffff"
    android:gravity="center_horizontal"
    android:layout_marginLeft="30dp"
    android:hint="姓名"/>


    <EditText
        android:id="@+id/et_show"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="#26ffffff"
        android:gravity="center_horizontal"
        android:hint="@string/et_good" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#26ffffff"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:hint="电话"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:background="#8CCDAA7D"
        android:text="@string/btn_yes"/>

        <Button
            android:id="@+id/btn_kan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="30dp"
            android:background="#8CCDAA7D"
            android:text="查看"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_qq"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/transparent"
        android:text="@string/btn_qq"/>

    <Button
        android:id="@+id/btn_mail"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:text="@string/btn_mail" />

    <Button
        android:id="@+id/btn_wechat"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/btn_wechat"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kan"
        android:layout_weight="1">

    </TextView>
</LinearLayout>
