<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_style_cfname"
        android:layout_marginTop="0dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/natie1"
        />
    <TextView
        android:id="@+id/tv_style_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_style_cfname"
        android:gravity="center_vertical"
        android:textSize="22sp"
        android:text="@string/tv_style_title"
        />
    <TextView
        android:id="@+id/tv_style_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_style_cfname"
        android:layout_below="@+id/tv_style_title"
        android:gravity="center_vertical"
        android:lines="2"
        android:ellipsize="end"
        android:textSize="14sp"
        android:text="@string/tv_style_content"
        />
    <TextView
        android:id="@+id/tv_style_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/iv_style_cfname"
        android:layout_below="@+id/tv_style_content"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:text="@string/tv_style_price"
        />
    <ImageView
        android:id="@+id/iv_style_star"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_toEndOf="@+id/iv_style_cfname"
        android:layout_below="@+id/tv_style_price"
        android:gravity="center_vertical"
        android:src="@drawable/star4"
        />

</RelativeLayout>